WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205248
[GStreamer] Fix silly bug in GStreamerVideoFrameLibWebRTC.
https://bugs.webkit.org/show_bug.cgi?id=205248
Summary
[GStreamer] Fix silly bug in GStreamerVideoFrameLibWebRTC.
Emilio Cobos Álvarez (:emilio)
Reported
2019-12-15 05:31:51 PST
.
Attachments
Patch
(1.83 KB, patch)
2019-12-15 05:33 PST
,
Emilio Cobos Álvarez (:emilio)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emilio Cobos Álvarez (:emilio)
Comment 1
2019-12-15 05:33:15 PST
Created
attachment 385712
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-15 07:16:14 PST
The commit-queue encountered the following flaky tests while processing
attachment 385712
[details]
: imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/playing-the-media-resource/pause-remove-from-document.html
bug 205251
(author:
cdumez@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2019-12-15 07:17:00 PST
Comment on
attachment 385712
[details]
Patch Clearing flags on attachment: 385712 Committed
r253536
: <
https://trac.webkit.org/changeset/253536
>
WebKit Commit Bot
Comment 4
2019-12-15 07:17:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug