[GStreamer] Fix silly bug in GStreamerVideoFrameLibWebRTC. https://bugs.webkit.org/show_bug.cgi?id=205248

Reviewed by Philippe Normand.

Binary operators in C++ don't work like in JavaScript, so this was always
passing 1.

No new tests, no observable behavior change.

* platform/mediastream/gstreamer/GStreamerVideoFrameLibWebRTC.cpp:
(WebCore::GStreamerVideoFrameLibWebRTC::ToI420):


Canonical link: https://commits.webkit.org/218452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253536 268f45cc-cd09-0410-ab3c-d52691b4dbfc